--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     </div>
     <button onclick="cartaAdcional()">carta adicional</button>
     <button onclick="contarCartas('jugador')">contar</button>
+    <div>
+      <span id="Apuesta" >0</span>
+    </div>
+    <div >
+      <button onclick="apostar(10)">10</button>
+      <button onclick="apostar(20)">20</button>
+      <button onclick="apostar(50)">50</button>
+      <button onclick="apostar(100)">100</button>
+    </div>
+
+
   </body>
 </html>
-
