--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <button onclick="apostar(50)">50</button>
       <button onclick="apostar(100)">100</button>
     </div>
+    <div>
+      <button onclick="limpiarapuesta()">Limpiar apuesta</button>
+    </div>
 
 
   </body>
