agregue el boton de plantar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <button onclick="cartaAdcional()">carta adicional</button>
     <button onclick="contarCartas('jugador')">contar</button>
+     <button onclick="plantar()">plantar</button>
   </body>
 </html>
 
