--- a/index.html
+++ b/index.html
@@ -3,26 +3,47 @@
   <head>
     <!--Libreria de Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <script src="./index.js"></script>
     <!-- El titulo de la pagina-->
     <p>Blackjack</p>
-
+    <div>
+      <ul>Apuesta Total
+      <p id="Apuesta" >0</p>
+      </ul>
+    </div>
+    <div>
+      <button id ="Apostar10" onclick="apostar(10)">10</button>
+      <button id ="Apostar20" onclick="apostar(20)">20</button>
+      <button id ="Apostar50" onclick="apostar(50)">50</button>
+      <button id ="Apostar100" onclick="apostar(100)">100</button>
+    </div>
+    <div>
+      <button id="Limpiar" onclick="limpiarapuesta()">Limpiar apuesta</button>
+    </div>
+    
+    <div id="container">
     <!-- El boton que llama la funcion myFunction, que genera las cartas -->
     <button onclick="myFunction()">Try it</button>
-
+    <div id="boton">
+        <button onclick="cartaAdcional()">Carta adicional</button>
+        <button onclick="contarCartas('jugador')">Contar</button>
+        </div>
     <!-- Los espacios donde se muestran los numeros de las cartas-->
-    <div id="casa">
-      <span id="casa1"></span>
-      <span id="casa2"></span>
+    <div id="casa"> 
+    <span id="casa1"> </span>
+    <span id="casa2"></span>
     </div>
+  
     <div id="jugador">
       <span id="jugador1"></span>
       <span id="jugador2"></span>
     </div>
-    <button onclick="cartaAdcional()">carta adicional</button>
-    <button onclick="contarCartas('jugador')">contar</button>
-  </body>
+  </div> 
+
+ </body>
+
 </html>
 
